--- a/GhostProjectv2/ClientApp/src/custom.css
+++ b/GhostProjectv2/ClientApp/src/custom.css
@@ -1,14 +1,33 @@
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
+}
+
+body {
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #023e73;
 }
 
 code {
-  color: #E01A76;
+    color: #d9d9d9;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    background-color: #023e73;
+    color: #D9D9D9;
+}
+
+.btn-outline-primary {
+    color: #023e73;
+    border-color: #023e73;
+}
+
+html {
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+#balanse {
+    max-width: 100%;
+    width: 100%;
+    max-height: 200px
 }
