--- a/GhostProjectv2/ClientApp/src/components/NavMenu.css
+++ b/GhostProjectv2/ClientApp/src/components/NavMenu.css
@@ -10,6 +10,12 @@ html {
 
 #navText {
     font-style: initial;
+    color: #023e73;
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+#navTextHighlight {
+    font-style: initial;
     color: #0027FF;
     font-family: 'IBM Plex Sans', sans-serif;
 }
