--- a/GhostProjectv2/ClientApp/src/custom.css
+++ b/GhostProjectv2/ClientApp/src/custom.css
@@ -9,6 +9,20 @@ body {
     background-color: #d9d9d9;
 }
 
+footer{
+    padding-top: 3em;
+}
+
+.page-container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content-wrap {
+    flex: 1;
+}
+
 code {
     color: #d9d9d9;
 }
